@@ -11,6 +11,7 @@
 ##
 
 - Fixed output of IKE PSK (mode 5300 and 5400) hashes to have separators at right position
+- Fixed the validation of the --brain-client-features command line argument (only values 1, 2 or 3 are allowed)
 
 ##
 ## Technical
